--- a/client/src/app/members/members-detail/members-detail.component.html
+++ b/client/src/app/members/members-detail/members-detail.component.html
@@ -1,4 +1,4 @@
-<!-- <h1 *ngIf="member">{{member.knownAs}}</h1> -->
+<h1 *ngIf="member">{{member.knownAs}}</h1> 
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
