--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,10 @@
+<ngx-spinner type="ball-atom"> 
+    <h3>Loading...</h3>
+
+</ngx-spinner>
+
 <app-nav></app-nav>
+
 <div class="container" style="margin-top: 100px;">
     <!--<app-home></app-home> -->
     <router-outlet></router-outlet>
